fixed play controller node out of bounds

--- a/WebApp/ToTheRescueWebApplication/ToTheRescueWebApplication/CSS/Play.css
+++ b/WebApp/ToTheRescueWebApplication/ToTheRescueWebApplication/CSS/Play.css
@@ -302,6 +302,14 @@ nav#playMenu li#back {
     .icon {
         margin-left: -17px;
     }
+
+    #closePraise {
+        font-size: 60%;
+    }
+
+    #closePraise:hover {
+        font-size: 70%;
+    }
 }
 /*When screen is 1080px or larger, apply this CSS*/
 @media only screen and (min-width: 1080px) {
